--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         </div>
 
         <div class="text">
-          <h1>Hello, <br />My name is,<br>
-        <span>Channim</span></h1>
+          <h1>
+            Hello, <br />My name is,<br />
+            <span>Channim</span>
+          </h1>
 
           <button>Porfolio</button>
         </div>
@@ -91,10 +93,9 @@
           <h2>UX/UI Design</h2>
           <p>
             Lorem ipsum dolor sit amet consisicing elit. Isipsum dolor sit amet
-            consisicing elit. Iste corporis esse consectetur, quisquam
-c nihil delec
-            aperiam itaque eius earum,te corporis esse consectetur, quisquam
-            aspernatur h ipsam in modi..
+            consisicing elit. Iste corporis esse consectetur, quisquam c nihil
+            delec aperiam itaque eius earum,te corporis esse consectetur,
+            quisquam aspernatur h ipsam in modi..
           </p>
           <a href="">Learn More</a>
         </div>
@@ -103,21 +104,20 @@ c nihil delec
           <h2>Web Design</h2>
           <p>
             Lorem ipsum dolor sit amet consisicing elit. Iste corporis esse
-            consectetur, it incidunt hic
-            nihil delectus vitae aperiam itaque eius earum, labore ipsam in
-            ipsum dolor sit ametng elit. Iste corporis esse
-            consecteaque eius earum,modi..
+            consectetur, it incidunt hic nihil delectus vitae aperiam itaque
+            eius earum, labore ipsam in ipsum dolor sit ametng elit. Iste
+            corporis esse consecteaque eius earum,modi..
           </p>
           <a href="">Learn More</a>
         </div>
         <div class="card" data-aos="fade-up" data-aos-duration="3000">
           <i class="fas fa-crop"></i>
-          <h2>App Development </h2>
+          <h2>App Development</h2>
           <p>
             Lorem ipsum dolor sit amet consisicing elit. Iste corporis esse
             consectetur, quisquam aspernatur harum tempora impedit incidunt hic
-            nihil de impedit incidunt hic nihil
-            delectus vitae aperiam itaque eius earum,n modi..
+            nihil de impedit incidunt hic nihil delectus vitae aperiam itaque
+            eius earum,n modi..
           </p>
           <a href="">Learn More</a>
         </div>
@@ -318,6 +318,9 @@ c nihil delec
       <hr />
       <p>&copy; 2025 Channim SD M15. All rights reserved.</p>
     </div>
+
+
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
